--- a/qmdj_dlg/qmdj_dlg.vcxproj.filters
+++ b/qmdj_dlg/qmdj_dlg.vcxproj.filters
@@ -33,6 +33,9 @@
       <Extensions>cpp;moc</Extensions>
       <SourceControlFiles>False</SourceControlFiles>
     </Filter>
+    <Filter Include="utils">
+      <UniqueIdentifier>{473126ad-2540-417b-9024-cdf99cba2fb2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -50,6 +53,9 @@
     <ClCompile Include="GeneratedFiles\qrc_qmdj_dlg.cpp">
       <Filter>Generated Files</Filter>
     </ClCompile>
+    <ClCompile Include="CalendarUtil.cpp">
+      <Filter>utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="qmdj_dlg.h">
@@ -65,6 +71,12 @@
   <ItemGroup>
     <ClInclude Include="GeneratedFiles\ui_qmdj_dlg.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CalendarUtil.h">
+      <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="vsop87d_table.h">
+      <Filter>utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
